2021-12-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_rectangle_bounds.rb: Added

2021-12-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_draw_3d.rb: Added

2021-12-19  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_mesh_picking.rb: Added
	* examples/text_font_filters.rb: Added
	* examples/utf8_font.rb: Modified to use texture filter
	* examples/textures_mouse_painting.rb: Added

2021-12-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_mesh_generation.rb: Added
	* examples/utf8_font.rb: Added another font
	* examples/core_3d_split_screen.rb: Added
	* examples/core_world_screen.rb: Added
	* examples/models_yaw_pitch_roll.rb: Added

2021-12-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* raylib_parser.py: Typo
	* Python cindex reports va_list as int on macOS
	* examples/models_loading_gltf.rb: Added

2021-12-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/0454acaacfaae4a3269d443d3d88045240f738c3 )
	* Added generator scripts for Windows

2021-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/core_storage_values.rb: Added

2021-11-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/core_drop_files.rb: Added

2021-11-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_first_person_maze.rb: Added

2021-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/raylib_opengl_interop.rb: Added
	* examples/models_geometric_shapes.rb: Added

2021-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/rlgl_compute_shader.rb: Added
	* examples/models_billboard.rb: Added

2021-11-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/physics_demo.rb: Added
	* examples/textures_background_scrolling.rb: Added
	* Added dll build scripts for Windows

2021-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_box_collisions.rb: Added