@@ -3,3 +3,4 @@ RAYLIB_TEXT_PATH = "../raylib_dll/raylib/examples/text/"
 RAYLIB_TEXTURE_PATH = "../raylib_dll/raylib/examples/textures/"
 RAYLIB_AUDIO_PATH = "../raylib_dll/raylib/examples/audio/"
 RAYLIB_OTHERS_PATH = "../raylib_dll/raylib/examples/others/"
+RAYLIB_SHADERS_PATH = "../raylib_dll/raylib/examples/shaders/"
