@@ -1,3 +1,7 @@
+2021-12-26  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/shaders_raymarching.rb: Added
+
 2021-12-24  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/text_rectangle_bounds.rb: Added
